--- a/team.html
+++ b/team.html
@@ -58,7 +58,7 @@
 
     <!-- HEADER -->
     <header class="shadow-sm">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="#">
                     <img src="images/logo.jpg" alt="Logo" class="logo me-2" style="max-height:40px;">
@@ -104,46 +104,22 @@
             </div>
         </nav>
     </header>
+    <section class="hero-section text-center">
+        <div class="container">
+            <img src="images/logo.jpg" alt="Logo LTD Health Club" class="hero-logo">
+            <h1 class="display-4 fw-bold mb-3">Mutuelle Santé LTD HEALTH CLUB</h1>
+            <p class="lead mb-4">
+                Découvrez les femmes et les hommes passionnés qui œuvrent chaque jour pour faire de LTD Health
+                Club une mutuelle humaine, innovante et proche de vous.
+            </p>
+
+        </div>
+    </section>
     <!-- SECTION ÉQUIPE -->
     <main class="flex-grow-1 py-5">
         <section class="container">
-            <div class="row justify-content-center mb-5">
-                <div class="card text-center shadow p-4 bg-white rounded" style="max-width: 600px;">
-                    <div class="card-body">
-                        <h2 class="h3 fw-bold mb-3 section-title">
-                            <i class="fas fa-users me-2"></i>Notre équipe
-                        </h2>
-                        <p>
-                            Chez <span class="fw-bold" style="color:#ff6600;">LTD HEALTH CLUB</span>, notre équipe est
-                            composée de professionnels passionnés, unis par la volonté d’offrir à chacun de nos membres
-                            un accompagnement humain, personnalisé et innovant.
-                        </p>
-                        <p>
-                            Nous croyons en la force de l’écoute, du respect et de la solidarité pour bâtir une relation
-                            de confiance durable. Notre expertise et notre engagement sont à votre service pour vous
-                            guider dans vos choix de santé et vous aider à mieux comprendre vos droits et garanties.
-                        </p>
-                        <p>
-                            Faites confiance à une équipe dynamique, disponible et toujours prête à vous accompagner
-                            pour votre bien-être et celui de votre famille.
-                        </p>
-                    </div>
-                </div>
-            </div>
             <!-- Cartes membres de l'équipe -->
             <div class="row g-4 justify-content-center">
-                <div class="col-md-4">
-                    <div class="card card-team text-center shadow p-4 bg-white rounded">
-                        <img src="images/assistance.jpg" class="rounded-circle mx-auto d-block mb-3"
-                            alt="Travail d'équipe">
-                        <div class="card-body">
-                            <h5 class="card-title mt-2">Notre équipe</h5>
-                            <p class="card-text text-muted">Des professionnels engagés, solidaires et à l’écoute, réunis
-                                pour vous accompagner à chaque étape de votre parcours santé.</p>
-                            <a href="#" class="btn btn-primary rounded-pill px-4">Voir plus</a>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-md-4">
                     <div class="card card-team text-center shadow p-4 bg-white rounded">
                         <img src="images/lotis.jpg" class="rounded-circle mx-auto d-block mb-3" alt="Dr Djopy LOTIS">
@@ -196,23 +172,25 @@
     <!-- FOOTER -->
     <footer class="footer mt-auto py-4">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-8 text-center text-md-start">
+            <div class="row justify-content-center text-center">
+                <div class="col-12">
                     <p class="mb-1">&copy; 2025 Samuel Kisenge. Tous droits réservés.</p>
-                    <p class="text-white-50 mb-0"><small>
+                    <p class="text-white-50 mb-2">
+                        <small>
                             Téléphone : <a href="tel:+243811641927" class="text-white-50 text-decoration-none">+243 811
                                 641 927</a> -
                             Email : <a href="mailto:ksksamuelkis@gmail.com"
                                 class="text-white-50 text-decoration-none">ksksamuelkis@gmail.com</a>
-                        </small></p>
-                </div>
-                <div class="col-md-4 text-md-end mt-3 mt-md-0">
-                    <a href="https://facebook.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a href="https://twitter.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
-                            class="fab fa-twitter"></i></a>
-                    <a href="https://linkedin.com/" target="_blank" rel="noopener"><i
-                            class="fab fa-linkedin-in"></i></a>
+                        </small>
+                    </p>
+                    <div>
+                        <a href="https://facebook.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
+                                class="fab fa-twitter"></i></a>
+                        <a href="https://linkedin.com/" target="_blank" rel="noopener"><i
+                                class="fab fa-linkedin-in"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
