--- a/about.html
+++ b/about.html
@@ -206,29 +206,31 @@
 
     <!-- Pied de page -->
     <!-- FOOTER -->
-    <footer class="bg-dark text-white mt-auto py-4">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-8 text-center">
-                    <p class="mb-1">&copy; 2025 Samuel Kisenge. Tous droits réservés.</p>
-                    <p class="text-white-50 mb-0"><small>
-                            Téléphone : <a href="tel:+243811641927" class="text-white-50 text-decoration-none">+243 811
-                                641 927</a> -
-                            Email : <a href="mailto:ksksamuelkis@gmail.com"
-                                class="text-white-50 text-decoration-none">ksksamuelkis@gmail.com</a>
-                        </small></p>
-                </div>
-                <div class="col-md-4 text-md-end mt-3 mt-md-0">
-                    <a href="https://facebook.com/LtdHealthClub10" class="text-white me-3" target="_blank"
-                        rel="noopener"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://twitter.com/LtdHealthClub10" class="text-white me-3" target="_blank"
-                        rel="noopener"><i class="fab fa-twitter"></i></a>
-                    <a href="https://linkedin.com/" class="text-white" target="_blank" rel="noopener"><i
+<footer class="footer mt-auto py-4">
+    <div class="container">
+        <div class="row justify-content-center text-center">
+            <div class="col-12">
+                <p class="mb-1">&copy; 2025 Samuel Kisenge. Tous droits réservés.</p>
+                <p class="text-white-50 mb-2">
+                    <small>
+                        Téléphone : <a href="tel:+243811641927" class="text-white-50 text-decoration-none">+243 811
+                            641 927</a> -
+                        Email : <a href="mailto:ksksamuelkis@gmail.com"
+                            class="text-white-50 text-decoration-none">ksksamuelkis@gmail.com</a>
+                    </small>
+                </p>
+                <div>
+                    <a href="https://facebook.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
+                            class="fab fa-twitter"></i></a>
+                    <a href="https://linkedin.com/" target="_blank" rel="noopener"><i
                             class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
