--- a/mission.html
+++ b/mission.html
@@ -73,6 +73,7 @@
                 conventions établies avec
                 nos prestataires de santé.
             </p>
+
         </div>
     </section>
 
@@ -109,6 +110,9 @@
                                         <a href="contact.html" class="btn btn-orange valeur-anim">
                                             <i class="fas fa-envelope me-2"></i>Contactez-nous
                                         </a>
+                                        <a href="team.html" class="btn btn-orange btn-lg px-4 ms-2 valeur-anim">
+                                            <i class="fas fa-users me-2"></i>Voir Notre Équipe
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -121,31 +125,31 @@
 
     <!-- Pied de page -->
     <!-- FOOTER -->
-<footer class="footer mt-auto py-4">
-    <div class="container">
-        <div class="row justify-content-center text-center">
-            <div class="col-12">
-                <p class="mb-1">&copy; 2025 Samuel Kisenge. Tous droits réservés.</p>
-                <p class="text-white-50 mb-2">
-                    <small>
-                        Téléphone : <a href="tel:+243811641927" class="text-white-50 text-decoration-none">+243 811
-                            641 927</a> -
-                        Email : <a href="mailto:ksksamuelkis@gmail.com"
-                            class="text-white-50 text-decoration-none">ksksamuelkis@gmail.com</a>
-                    </small>
-                </p>
-                <div>
-                    <a href="https://facebook.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a href="https://twitter.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
-                            class="fab fa-twitter"></i></a>
-                    <a href="https://linkedin.com/" target="_blank" rel="noopener"><i
-                            class="fab fa-linkedin-in"></i></a>
+    <footer class="footer mt-auto py-4">
+        <div class="container">
+            <div class="row justify-content-center text-center">
+                <div class="col-12">
+                    <p class="mb-1">&copy; 2025 Samuel Kisenge. Tous droits réservés.</p>
+                    <p class="text-white-50 mb-2">
+                        <small>
+                            Téléphone : <a href="tel:+243811641927" class="text-white-50 text-decoration-none">+243 811
+                                641 927</a> -
+                            Email : <a href="mailto:ksksamuelkis@gmail.com"
+                                class="text-white-50 text-decoration-none">ksksamuelkis@gmail.com</a>
+                        </small>
+                    </p>
+                    <div>
+                        <a href="https://facebook.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
+                                class="fab fa-twitter"></i></a>
+                        <a href="https://linkedin.com/" target="_blank" rel="noopener"><i
+                                class="fab fa-linkedin-in"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
