--- a/mission.html
+++ b/mission.html
@@ -110,7 +110,7 @@
                                         <a href="contact.html" class="btn btn-orange valeur-anim">
                                             <i class="fas fa-envelope me-2"></i>Contactez-nous
                                         </a>
-                                        <a href="team.html" class="btn btn-orange btn-lg px-4 ms-2 valeur-anim">
+                                        <a href="team.html" class="btn btn-orange  valeur-anim">
                                             <i class="fas fa-users me-2"></i>Voir Notre Équipe
                                         </a>
                                     </div>
