all_footeurç_div

--- a/mission.html
+++ b/mission.html
@@ -106,11 +106,11 @@
                                         <span class="text-dark">protéger la santé de chacun, quel que soit son âge ou sa
                                             situation.</span>
                                     </div>
-                                    <div class="text-center mt-3">
+                                    <div class="d-flex justify-content-center gap-3 mt-3">
                                         <a href="contact.html" class="btn btn-orange valeur-anim">
                                             <i class="fas fa-envelope me-2"></i>Contactez-nous
                                         </a>
-                                        <a href="team.html" class="btn btn-orange  valeur-anim">
+                                        <a href="team.html" class="btn btn-orange valeur-anim">
                                             <i class="fas fa-users me-2"></i>Voir Notre Équipe
                                         </a>
                                     </div>
