--- a/mission.html
+++ b/mission.html
@@ -78,50 +78,39 @@
     </section>
 
     <!-- Contenu principal -->
-    <main class="flex-grow-1 py-5">
-        <section class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-10">
-                    <!-- Image principale en haut du contenu, style identique à index.html -->
-                    <div class="text-center mb-5">
-                        <img src="images/hero_4.jpg" alt="Mission LTD Health Club" class="img-fluid rounded-4 shadow"
-                            style="max-height:350px; object-fit:cover;">
-                    </div>
-                    <!-- Section Qui sommes-nous -->
-                    <article class="card mb-5 border-0 shadow-sm valeur-anim">
-                        <div class="card-body p-4">
-                            <h2 class="h3 mb-4 text-orange"><i class="fas fa-info-circle me-2"></i>Qui sommes-nous ?
-                            </h2>
-                            <div class="row g-4 align-items-center">
-                                <div class="col-md-6">
-                                    <p class="lead mb-3">La <strong>Mutuelle LTD HEALTH CLUB</strong> est une
-                                        mutuelle à but non lucratif fondée sur des valeurs de solidarité, de proximité
-                                        et d'écoute.</p>
-                                    <p>Depuis plus de 2 ans, nous accompagnons nos adhérents dans la gestion de leurs
-                                        dépenses de santé avec des offres claires, accessibles et personnalisées.</p>
-                                    <div
-                                        class="bg-white border-start border-4 border-orange rounded-3 p-3 mt-4 mb-2 valeur-anim">
-                                        <span class="fw-semibold text-orange"><i class="fas fa-bullseye me-2"></i>Notre
-                                            objectif :</span>
-                                        <span class="text-dark">protéger la santé de chacun, quel que soit son âge ou sa
-                                            situation.</span>
-                                    </div>
-                                    <div class="d-flex justify-content-center gap-3 mt-3">
-                                        <a href="contact.html" class="btn btn-orange valeur-anim">
-                                            <i class="fas fa-envelope me-2"></i>Contactez-nous
-                                        </a>
-                                        <a href="team.html" class="btn btn-orange valeur-anim">
-                                            <i class="fas fa-users me-2"></i>Voir Notre Équipe
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </article>
+    <section class="py-5 bg-light">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md6 mb-4 mb-md-0">
+                    <img src="images/us.jpg" alt="Mission LTD Health Club" class="img-fluid rounded-4 shadow">
+                </div>
+                <div class="col-md-6">
+                    <h2 class="h3 fw-bold mb-3 section-title"><i class="fas fa-info-circle me-2"></i>Qui sommes-nous ?
+                    </h2>
+                    <p class="lead mb-3">La <strong>Mutuelle LTD HEALTH CLUB</strong> est une
+                        mutuelle à but non lucratif fondée sur des valeurs de solidarité, de proximité
+                        et d'écoute.</p>
+                    <p class="lead mb-3">Depuis plus de 2 ans, nous accompagnons nos adhérents dans la gestion de leurs
+                        dépenses de santé avec des offres claires, accessibles et personnalisées.</p>
+                </div>
+                <div class="bg-white border-start border-4 border-orange rounded-3 p-3 mt-4 mb-2 valeur-anim">
+                    <span class="lead mb-3"><i class="fas fa-bullseye me-2"></i>Notre
+                        objectif :</span>
+                    <span class="lead mb-3 text-dark"><strong>protéger la santé de chacun, quel que soit son âge ou sa
+                            situation.</span>
+                </div>
+                <div class="d-flex justify-content-center gap-3 mt-3">
+                    <a href="contact.html" class="btn btn-orange valeur-anim">
+                        <i class="fas fa-envelope me-2"></i>Contactez-nous
+                    </a>
+                    <a href="team.html" class="btn btn-orange valeur-anim">
+                        <i class="fas fa-users me-2"></i>Voir Notre Équipe
+                    </a>
                 </div>
             </div>
-        </section>
-    </main>
+        </div>
+        </div>
+    </section>
 
     <!-- Pied de page -->
     <!-- FOOTER -->
