pages_engagemnts_autres

--- a/contact.html
+++ b/contact.html
@@ -67,8 +67,8 @@
     <section class="hero-section text-center">
         <div class="container">
             <img src="images/logo.jpg" alt="logo LTD health Club" class="hero-logo">
-            <h1 class="display-4 fw-bold mb-3">Contactez-nous</h1>
-            <h2 class="h3 fw-bold mb-4 mb-md-0">Une question ? Un besoin ? Notre équipe vous répond rapidement.</h2>
+            <h3 class="display-4 fw-bold mb-3">LTD HEALTH CLUB Contactez-nous</h3>
+            <p class="lead mb-4">Une question ? Un besoin ? Notre équipe vous répond rapidement.</h2>
         </div>
     </section>
 
