--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section class="hero-section text-center">
         <div class="container">
             <img src="images/logo.jpg" alt="Logo LTD Health Club" class="hero-logo">
-            <h1 class="display-4 fw-bold mb-3">Mutuelle Santé LTD HEALTH CLUB</h1>
+            <h1 class="display-4 fw-bold mb-3">Mutuelle De Santé LTD HEALTH CLUB</h1>
             <p class="lead mb-4">La mutuelle qui prend soin de vous et de votre famille à Kinshasa.<br>
                 Des garanties adaptées, un accompagnement personnalisé et des remboursements rapides.</p>
             <a href="contact.html" class="btn btn-orange btn-lg px-4"><i class="fas fa-user-plus me-2"></i>Demander un
