--- a/engagement.html
+++ b/engagement.html
@@ -7,7 +7,7 @@
         content="LTD Health Club : mutuelle de santé humaine, accessible et adaptée à vos besoins à Kinshasa. Demandez un devis rapidement.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Engagement_Mutuelle Santé LTD HEALTH CLUB</title>
+    <title>Engagement-Mutuelle Santé LTD HEALTH CLUB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -15,8 +15,6 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-
-    <!-- HEADER -->
     <header class="shadow-sm">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
@@ -65,49 +63,95 @@
             </div>
         </nav>
     </header>
-    <!-- Ajoute juste après la balise <header> -->
-    <header class="shadow-sm">
-        <!-- ...existing code... -->
-    </header>
-
-    <!-- Phrase défilante pour signaler la conception -->
-    <div style="background:#ff6600; color:#fff; font-weight:bold;">
-        <marquee behavior="scroll" direction="left" scrollamount="6">
-            Cette page est en pleine conception. Merci de votre compréhension !
-        </marquee>
-    </div>
-    <!-- ...existing code... -->
-
-
-    <!-- HERO SECTION -->
-
-
-    <!-- FOOTER -->
-<footer class="footer mt-auto py-4">
-    <div class="container">
-        <div class="row justify-content-center text-center">
-            <div class="col-12">
-                <p class="mb-1">&copy; 2025 Samuel Kisenge. Tous droits réservés.</p>
-                <p class="text-white-50 mb-2">
-                    <small>
-                        Téléphone : <a href="tel:+243811641927" class="text-white-50 text-decoration-none">+243 811
-                            641 927</a> -
-                        Email : <a href="mailto:ksksamuelkis@gmail.com"
-                            class="text-white-50 text-decoration-none">ksksamuelkis@gmail.com</a>
-                    </small>
-                </p>
-                <div>
-                    <a href="https://facebook.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a href="https://twitter.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
-                            class="fab fa-twitter"></i></a>
-                    <a href="https://linkedin.com/" target="_blank" rel="noopener"><i
-                            class="fab fa-linkedin-in"></i></a>
+    <section class="hero-section text-center">
+        <div class="container">
+            <img src=" images/logo.jpg" alt="Logo LTD Health Club" class="hero-logo">
+            <h1 class="hero-title mt-3">Nos Engagements</h1>
+            <p class="lead mb-4">Votre santé, notre priorité</p>
+        </div>
+    </section>
+    <!-- Section Engagements -->
+    <main class="flex-grow-1 py-5">
+        <div class="card-body p-4 position-relative bg-transparent">
+            <h5 class="h3 mb-4 text-orange position-relative text-center z-1"><i class="fas fa-hand-holding-heart me-2"
+                    style="color: #ff6600;"></i><strong>
+                    Nos engagements :</strong>
+            </h5>
+            <div class="row g-6 position-relative z-1">
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="valeur-card h-100 text-center p-3 rounded-4 shadow valeur-anim bg-white bg-opacity-75">
+                        <div class="mb-2 text-orange">
+                            <i class="fas fa-check-circle text-orange me-2" style="color: #ff6600;"></i>
+                        </div>
+                        <h5 class="card-title">S'adapter à vos besoins</h5>
+                        <p>blablabblabal</p>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="valeur-card h-100 text-center p-3 rounded-4 shadow valeur-anim bg-white bg-opacity-75">
+                        <div class="mb-2 text-orange">
+                            <i class="fas fa-check-circle text-orange me-2" style="color: #ff6600;"></i>
+                        </div>
+                        <h5 class="card-title">Remboursement rapide</h5>
+                        <p>kakakkakakakak</p>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="valeur-card h-100 text-center p-3 rounded-4 shadow valeur-anim bg-white bg-opacity-75">
+                        <div class="mb-2 text-orange">
+                            <i class="fas fa-check-circle text-orange me-2" style="color: #ff6600;"></i>
+                        </div>
+                        <h5 class="card-title">Promotion de la prévention</h5>
+                        <p>kakakkakakakak</p>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="valeur-card h-100 text-center p-3 rounded-4 shadow valeur-anim bg-white bg-opacity-75">
+                        <div class="mb-2 text-orange">
+                            <i class="fas fa-check-circle text-orange me-2" style="color: #ff6600;"></i>
+                        </div>
+                        <h5 class="card-title">Accès à la
+                            santé
+                            pour tous</h5>
+                        <p>kakakkakakakak</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
+        <div class="mt-4 text-center position-relative z-1">
+            <p class="lead mb-4">Nous sommes convaincus que la santé est un droit fondamental</p>
+            <a href="contact.html" class="btn btn-orange px-4 py-2">
+                <i class="fas fa-user-plus me-2"></i>Rejoignez-nous
+            </a>
+        </div>
+    </main>
+    <!-- FOOTER -->
+    <footer class="footer mt-auto py-4">
+        <div class="container">
+            <div class="row justify-content-center text-center">
+                <div class="col-12">
+                    <p class="mb-1">&copy; 2025 Samuel Kisenge. Tous droits réservés.</p>
+                    <p class="text-white-50 mb-2">
+                        <small>
+                            Téléphone : <a href="tel:+243811641927" class="text-white-50 text-decoration-none">+243
+                                811
+                                641 927</a> -
+                            Email : <a href="mailto:ksksamuelkis@gmail.com"
+                                class="text-white-50 text-decoration-none">ksksamuelkis@gmail.com</a>
+                        </small>
+                    </p>
+                    <div>
+                        <a href="https://facebook.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/LtdHealthClub10" class="me-3" target="_blank" rel="noopener"><i
+                                class="fab fa-twitter"></i></a>
+                        <a href="https://linkedin.com/" target="_blank" rel="noopener"><i
+                                class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
