--- a/engagement.html
+++ b/engagement.html
@@ -84,7 +84,7 @@
                             <i class="fas fa-check-circle text-orange me-2" style="color: #ff6600;"></i>
                         </div>
                         <h5 class="card-title">S'adapter à vos besoins</h5>
-                        <p>blablabblabal</p>
+                        <p>Nous proposons des solutions flexibles et adaptées à chaque adhérent.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3">
@@ -93,7 +93,7 @@
                             <i class="fas fa-check-circle text-orange me-2" style="color: #ff6600;"></i>
                         </div>
                         <h5 class="card-title">Remboursement rapide</h5>
-                        <p>kakakkakakakak</p>
+                        <p>Des démarches simples et une prise en charge sans délai inutile.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3">
@@ -102,7 +102,7 @@
                             <i class="fas fa-check-circle text-orange me-2" style="color: #ff6600;"></i>
                         </div>
                         <h5 class="card-title">Promotion de la prévention</h5>
-                        <p>kakakkakakakak</p>
+                        <p>Nous valorisons la prévention et la sensibilisation pour une meilleure santé.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-3">
@@ -113,7 +113,7 @@
                         <h5 class="card-title">Accès à la
                             santé
                             pour tous</h5>
-                        <p>kakakkakakakak</p>
+                        <p>Des offres inclusives afin que chacun puisse bénéficier de soins de qualité.</p>
                     </div>
                 </div>
             </div>
