--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
                     <div class="card h-100 shadow-sm">
                         <div class="card-body">
                             <i class="fas fa-hospital fa-2x" style="color:#ff6600;"></i>
-                            <h5 class="card-title">Hospitalisation</h5>
+                            <a href="hospitalisation.html" style="text-decoration: none;">
+                                <h5 class="card-title">Hospitalisation</h5>
+                            </a>
                             <p class="card-text">Prise en charge optimale de vos frais d’hospitalisation.</p>
                         </div>
                     </div>
@@ -122,7 +124,9 @@
                     <div class="card h-100 shadow-sm">
                         <div class="card-body">
                             <i class="fas fa-stethoscope fa-2x" style="color:#ff6600;"></i>
-                            <h5 class="card-title">Soins courants</h5>
+                            <a href="soinsCourant.html" style="text-decoration: none;">
+                                <h5 class="card-title">Soins courants</h5>
+                            </a>
                             <p class="card-text">Consultations, analyses, pharmacie, radiologie…</p>
                         </div>
                     </div>
@@ -131,7 +135,9 @@
                     <div class="card h-100 shadow-sm">
                         <div class="card-body">
                             <i class="fas fa-tooth fa-2x" style="color:#ff6600;"></i>
-                            <h5 class="card-title">Dentaire & Optique</h5>
+                            <a href="dentaireOptique.html" style="text-decoration: none;">
+                                <h5 class="card-title">Dentaire & Optique</h5>
+                            </a>
                             <p class="card-text">Des remboursements adaptés pour vos soins dentaires et optiques.</p>
                         </div>
                     </div>
@@ -140,7 +146,9 @@
                     <div class="card h-100 shadow-sm">
                         <div class="card-body">
                             <i class="fas fa-baby fa-2x" style="color:#ff6600;"></i>
-                            <h5 class="card-title">Pédiatrie</h5>
+                            <a href="pediatrie.html" style="text-decoration: none;">
+                                <h5 class="card-title">Pédiatrie</h5>
+                            </a>
                             <p class="card-text">Un accompagnement médical bienveillant pour vos enfants.</p>
                         </div>
                     </div>
@@ -158,7 +166,9 @@
                     <div class="card h-100 shadow-sm text-center">
                         <div class="card-body">
                             <i class="fas fa-file-signature fa-2x" style="color:#ff6600;"></i>
-                            <h5 class="card-title">1. Demandez un devis</h5>
+                            <a href="contact.html" style="text-decoration: none;">
+                                <h5 class="card-title">1. Demandez un devis</h5>
+                            </a>
                             <p class="card-text">Remplissez le formulaire ou contactez-nous pour recevoir une
                                 proposition personnalisée.</p>
                         </div>
@@ -168,7 +178,9 @@
                     <div class="card h-100 shadow-sm text-center">
                         <div class="card-body">
                             <i class="fas fa-user-check fa-2x" style="color:#ff6600;"></i>
-                            <h5 class="card-title">2. Souscrivez facilement</h5>
+                            <a href="contact.html" style="text-decoration: none;">
+                                <h5 class="card-title">2. Souscrivez facilement</h5>
+                            </a>
                             <p class="card-text">Choisissez votre formule et bénéficiez de nos garanties santé.</p>
                         </div>
                     </div>
@@ -177,7 +189,9 @@
                     <div class="card h-100 shadow-sm text-center">
                         <div class="card-body">
                             <i class="fas fa-heartbeat fa-2x" style="color:#ff6600;"></i>
-                            <h5 class="card-title">3. Profitez de la couverture</h5>
+                            <a href="partenaire.html" style="text-decoration: none;">
+                                <h5 class="card-title">3. Profitez de la couverture</h5>
+                            </a>
                             <p class="card-text">Accédez à notre réseau de partenaires et bénéficiez d’un accompagnement
                                 personnalisé.</p>
                         </div>
